all/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> goal
Rule 1     goal -> def
Rule 2     goal -> def goal
Rule 3     def -> defv
Rule 4     def -> deff
Rule 5     defv -> type defv_multi SEMICOL
Rule 6     defv_multi -> id_adv array
Rule 7     defv_multi -> id_adv assign
Rule 8     defv_multi -> id_adv array COMMA defv_multi
Rule 9     defv_multi -> id_adv assign COMMA defv_multi
Rule 10    id_adv -> ID
Rule 11    id_adv -> TIMES id_adv
Rule 12    array -> empty
Rule 13    array -> LBRACK IVAL RBRACK
Rule 14    deff -> type id_adv LPAREN s_args RPAREN LBRACE body RBRACE
Rule 15    s_args -> empty
Rule 16    s_args -> VOID
Rule 17    s_args -> args
Rule 18    args -> arg
Rule 19    args -> arg COMMA args
Rule 20    arg -> type id_adv array
Rule 21    body -> pre_defv_many pre_stmt_many
Rule 22    pre_defv_many -> empty
Rule 23    pre_defv_many -> defv_many
Rule 24    defv_many -> defv
Rule 25    defv_many -> defv defv_many
Rule 26    pre_stmt_many -> empty
Rule 27    pre_stmt_many -> stmt_many
Rule 28    stmt_many -> stmt
Rule 29    stmt_many -> stmt stmt_many
Rule 30    stmt -> SEMICOL
Rule 31    stmt -> LBRACE body RBRACE
Rule 32    stmt -> expr_many SEMICOL
Rule 33    stmt -> WHILE LPAREN expr_many RPAREN stmt
Rule 34    stmt -> FOR LPAREN expr_many SEMICOL expr_many SEMICOL expr_many RPAREN stmt
Rule 35    stmt -> IF LPAREN expr_many RPAREN stmt
Rule 36    stmt -> IF LPAREN expr_many RPAREN stmt ELSE stmt
Rule 37    stmt -> CONTINUE SEMICOL
Rule 38    stmt -> BREAK SEMICOL
Rule 39    stmt -> RETURN SEMICOL
Rule 40    stmt -> RETURN expr_many SEMICOL
Rule 41    priexpr -> ID
Rule 42    priexpr -> const
Rule 43    priexpr -> LPAREN expr_many RPAREN
Rule 44    postexpr -> priexpr
Rule 45    postexpr -> postexpr LBRACK expr_many RBRACK
Rule 46    postexpr -> postexpr LPAREN RPAREN
Rule 47    postexpr -> postexpr LPAREN argexpr_list RPAREN
Rule 48    postexpr -> postexpr INC
Rule 49    postexpr -> postexpr DEC
Rule 50    argexpr_list -> expr
Rule 51    argexpr_list -> argexpr_list COMMA expr
Rule 52    unaryexpr -> postexpr
Rule 53    unaryexpr -> AND unaryexpr
Rule 54    unaryexpr -> TIMES unaryexpr
Rule 55    unaryexpr -> INC unaryexpr
Rule 56    unaryexpr -> DEC unaryexpr
Rule 57    unaryexpr -> PLUS unaryexpr
Rule 58    unaryexpr -> MINUS unaryexpr
Rule 59    unaryexpr -> NOT unaryexpr
Rule 60    unaryexpr -> LNOT unaryexpr
Rule 61    multexpr -> unaryexpr
Rule 62    multexpr -> multexpr TIMES unaryexpr
Rule 63    multexpr -> multexpr DIVIDE unaryexpr
Rule 64    multexpr -> multexpr MOD unaryexpr
Rule 65    addexpr -> multexpr
Rule 66    addexpr -> addexpr PLUS multexpr
Rule 67    addexpr -> addexpr MINUS multexpr
Rule 68    shiftexpr -> addexpr
Rule 69    shiftexpr -> shiftexpr LSHIFT addexpr
Rule 70    shiftexpr -> shiftexpr RSHIFT addexpr
Rule 71    relexpr -> shiftexpr
Rule 72    relexpr -> relexpr LE shiftexpr
Rule 73    relexpr -> relexpr GE shiftexpr
Rule 74    relexpr -> relexpr LEQ shiftexpr
Rule 75    relexpr -> relexpr GEQ shiftexpr
Rule 76    eqexpr -> relexpr
Rule 77    eqexpr -> eqexpr EQ relexpr
Rule 78    eqexpr -> eqexpr NE relexpr
Rule 79    andexpr -> eqexpr
Rule 80    andexpr -> andexpr AND eqexpr
Rule 81    xorexpr -> andexpr
Rule 82    xorexpr -> xorexpr XOR andexpr
Rule 83    orexpr -> xorexpr
Rule 84    orexpr -> orexpr OR xorexpr
Rule 85    landexpr -> orexpr
Rule 86    landexpr -> landexpr LAND orexpr
Rule 87    lorexpr -> landexpr
Rule 88    lorexpr -> lorexpr LOR landexpr
Rule 89    expr -> lorexpr
Rule 90    expr -> postexpr assign_op expr
Rule 91    expr -> TIMES unaryexpr assign_op expr
Rule 92    assign_op -> ASSIGN
Rule 93    assign_op -> PLUS_ASSIGN
Rule 94    assign_op -> MINUS_ASSIGN
Rule 95    assign_op -> TIMES_ASSIGN
Rule 96    assign_op -> DIVIDE_ASSIGN
Rule 97    assign_op -> MOD_ASSIGN
Rule 98    assign_op -> AND_ASSIGN
Rule 99    assign_op -> OR_ASSIGN
Rule 100   assign_op -> XOR_ASSIGN
Rule 101   assign_op -> LSHIFT_ASSIGN
Rule 102   assign_op -> RSHIFT_ASSIGN
Rule 103   expr_many -> expr
Rule 104   expr_many -> expr_many COMMA expr
Rule 105   assign -> ASSIGN expr
Rule 106   type -> INT
Rule 107   type -> FLOAT
Rule 108   type -> CHAR
Rule 109   type -> VOID
Rule 110   const -> IVAL
Rule 111   const -> FVAL
Rule 112   const -> SVAL
Rule 113   const -> CVAL
Rule 114   empty -> <empty>

Terminals, with rules where they appear

AND                  : 53 80
AND_ASSIGN           : 98
ASSIGN               : 92 105
BREAK                : 38
CHAR                 : 108
COMMA                : 8 9 19 51 104
CONTINUE             : 37
CVAL                 : 113
DEC                  : 49 56
DIVIDE               : 63
DIVIDE_ASSIGN        : 96
ELSE                 : 36
EQ                   : 77
FLOAT                : 107
FOR                  : 34
FVAL                 : 111
GE                   : 73
GEQ                  : 75
ID                   : 10 41
IF                   : 35 36
INC                  : 48 55
INT                  : 106
IVAL                 : 13 110
LAND                 : 86
LBRACE               : 14 31
LBRACK               : 13 45
LE                   : 72
LEQ                  : 74
LNOT                 : 60
LOR                  : 88
LPAREN               : 14 33 34 35 36 43 46 47
LSHIFT               : 69
LSHIFT_ASSIGN        : 101
MINUS                : 58 67
MINUS_ASSIGN         : 94
MOD                  : 64
MOD_ASSIGN           : 97
NE                   : 78
NOT                  : 59
OR                   : 84
OR_ASSIGN            : 99
PLUS                 : 57 66
PLUS_ASSIGN          : 93
RBRACE               : 14 31
RBRACK               : 13 45
RETURN               : 39 40
RPAREN               : 14 33 34 35 36 43 46 47
RSHIFT               : 70
RSHIFT_ASSIGN        : 102
SEMICOL              : 5 30 32 34 34 37 38 39 40
SVAL                 : 112
TIMES                : 11 54 62 91
TIMES_ASSIGN         : 95
VOID                 : 16 109
WHILE                : 33
XOR                  : 82
XOR_ASSIGN           : 100
error                : 

Nonterminals, with rules where they appear

addexpr              : 66 67 68 69 70
andexpr              : 80 81 82
arg                  : 18 19
argexpr_list         : 47 51
args                 : 17 19
array                : 6 8 20
assign               : 7 9
assign_op            : 90 91
body                 : 14 31
const                : 42
def                  : 1 2
deff                 : 4
defv                 : 3 24 25
defv_many            : 23 25
defv_multi           : 5 8 9
empty                : 12 15 22 26
eqexpr               : 77 78 79 80
expr                 : 50 51 90 91 103 104 105
expr_many            : 32 33 34 34 34 35 36 40 43 45 104
goal                 : 2 0
id_adv               : 6 7 8 9 11 14 20
landexpr             : 86 87 88
lorexpr              : 88 89
multexpr             : 62 63 64 65 66 67
orexpr               : 84 85 86
postexpr             : 45 46 47 48 49 52 90
pre_defv_many        : 21
pre_stmt_many        : 21
priexpr              : 44
relexpr              : 72 73 74 75 76 77 78
s_args               : 14
shiftexpr            : 69 70 71 72 73 74 75
stmt                 : 28 29 33 34 35 36 36
stmt_many            : 27 29
type                 : 5 14 20
unaryexpr            : 53 54 55 56 57 58 59 60 61 62 63 64 91
xorexpr              : 82 83 84

Parsing method: LALR

state 0

    (0) S' -> . goal
    (1) goal -> . def
    (2) goal -> . def goal
    (3) def -> . defv
    (4) def -> . deff
    (5) defv -> . type defv_multi SEMICOL
    (14) deff -> . type id_adv LPAREN s_args RPAREN LBRACE body RBRACE
    (106) type -> . INT
    (107) type -> . FLOAT
    (108) type -> . CHAR
    (109) type -> . VOID

    INT             shift and go to state 4
    FLOAT           shift and go to state 3
    CHAR            shift and go to state 2
    VOID            shift and go to state 1

    goal                           shift and go to state 5
    type                           shift and go to state 6
    def                            shift and go to state 7
    deff                           shift and go to state 8
    defv                           shift and go to state 9

state 1

    (109) type -> VOID .

    ID              reduce using rule 109 (type -> VOID .)
    TIMES           reduce using rule 109 (type -> VOID .)


state 2

    (108) type -> CHAR .

    ID              reduce using rule 108 (type -> CHAR .)
    TIMES           reduce using rule 108 (type -> CHAR .)


state 3

    (107) type -> FLOAT .

    ID              reduce using rule 107 (type -> FLOAT .)
    TIMES           reduce using rule 107 (type -> FLOAT .)


state 4

    (106) type -> INT .

    ID              reduce using rule 106 (type -> INT .)
    TIMES           reduce using rule 106 (type -> INT .)


state 5

    (0) S' -> goal .



state 6

    (5) defv -> type . defv_multi SEMICOL
    (14) deff -> type . id_adv LPAREN s_args RPAREN LBRACE body RBRACE
    (6) defv_multi -> . id_adv array
    (7) defv_multi -> . id_adv assign
    (8) defv_multi -> . id_adv array COMMA defv_multi
    (9) defv_multi -> . id_adv assign COMMA defv_multi
    (10) id_adv -> . ID
    (11) id_adv -> . TIMES id_adv

    ID              shift and go to state 12
    TIMES           shift and go to state 13

    id_adv                         shift and go to state 11
    defv_multi                     shift and go to state 10

state 7

    (1) goal -> def .
    (2) goal -> def . goal
    (1) goal -> . def
    (2) goal -> . def goal
    (3) def -> . defv
    (4) def -> . deff
    (5) defv -> . type defv_multi SEMICOL
    (14) deff -> . type id_adv LPAREN s_args RPAREN LBRACE body RBRACE
    (106) type -> . INT
    (107) type -> . FLOAT
    (108) type -> . CHAR
    (109) type -> . VOID

    $end            reduce using rule 1 (goal -> def .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 3
    CHAR            shift and go to state 2
    VOID            shift and go to state 1

    goal                           shift and go to state 14
    type                           shift and go to state 6
    def                            shift and go to state 7
    deff                           shift and go to state 8
    defv                           shift and go to state 9

state 8

    (4) def -> deff .

    INT             reduce using rule 4 (def -> deff .)
    FLOAT           reduce using rule 4 (def -> deff .)
    CHAR            reduce using rule 4 (def -> deff .)
    VOID            reduce using rule 4 (def -> deff .)
    $end            reduce using rule 4 (def -> deff .)


state 9

    (3) def -> defv .

    INT             reduce using rule 3 (def -> defv .)
    FLOAT           reduce using rule 3 (def -> defv .)
    CHAR            reduce using rule 3 (def -> defv .)
    VOID            reduce using rule 3 (def -> defv .)
    $end            reduce using rule 3 (def -> defv .)


state 10

    (5) defv -> type defv_multi . SEMICOL

    SEMICOL         shift and go to state 15


state 11

    (14) deff -> type id_adv . LPAREN s_args RPAREN LBRACE body RBRACE
    (6) defv_multi -> id_adv . array
    (7) defv_multi -> id_adv . assign
    (8) defv_multi -> id_adv . array COMMA defv_multi
    (9) defv_multi -> id_adv . assign COMMA defv_multi
    (12) array -> . empty
    (13) array -> . LBRACK IVAL RBRACK
    (105) assign -> . ASSIGN expr
    (114) empty -> .

    LPAREN          shift and go to state 16
    LBRACK          shift and go to state 21
    ASSIGN          shift and go to state 20
    COMMA           reduce using rule 114 (empty -> .)
    SEMICOL         reduce using rule 114 (empty -> .)

    assign                         shift and go to state 17
    array                          shift and go to state 19
    empty                          shift and go to state 18

state 12

    (10) id_adv -> ID .

    LBRACK          reduce using rule 10 (id_adv -> ID .)
    ASSIGN          reduce using rule 10 (id_adv -> ID .)
    COMMA           reduce using rule 10 (id_adv -> ID .)
    SEMICOL         reduce using rule 10 (id_adv -> ID .)
    RPAREN          reduce using rule 10 (id_adv -> ID .)
    LPAREN          reduce using rule 10 (id_adv -> ID .)


state 13

    (11) id_adv -> TIMES . id_adv
    (10) id_adv -> . ID
    (11) id_adv -> . TIMES id_adv

    ID              shift and go to state 12
    TIMES           shift and go to state 13

    id_adv                         shift and go to state 22

state 14

    (2) goal -> def goal .

    $end            reduce using rule 2 (goal -> def goal .)


state 15

    (5) defv -> type defv_multi SEMICOL .

    INT             reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    FLOAT           reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    CHAR            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    VOID            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    SEMICOL         reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    LBRACE          reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    WHILE           reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    FOR             reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    IF              reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    CONTINUE        reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    BREAK           reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    RETURN          reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    TIMES           reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    ID              reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    LPAREN          reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    IVAL            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    FVAL            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    SVAL            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    CVAL            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    AND             reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    INC             reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    DEC             reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    PLUS            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    MINUS           reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    NOT             reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    LNOT            reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    RBRACE          reduce using rule 5 (defv -> type defv_multi SEMICOL .)
    $end            reduce using rule 5 (defv -> type defv_multi SEMICOL .)


state 16

    (14) deff -> type id_adv LPAREN . s_args RPAREN LBRACE body RBRACE
    (15) s_args -> . empty
    (16) s_args -> . VOID
    (17) s_args -> . args
    (114) empty -> .
    (18) args -> . arg
    (19) args -> . arg COMMA args
    (20) arg -> . type id_adv array
    (106) type -> . INT
    (107) type -> . FLOAT
    (108) type -> . CHAR
    (109) type -> . VOID

    VOID            shift and go to state 23
    RPAREN          reduce using rule 114 (empty -> .)
    INT             shift and go to state 4
    FLOAT           shift and go to state 3
    CHAR            shift and go to state 2

    s_args                         shift and go to state 26
    type                           shift and go to state 27
    args                           shift and go to state 28
    arg                            shift and go to state 25
    empty                          shift and go to state 24

state 17

    (7) defv_multi -> id_adv assign .
    (9) defv_multi -> id_adv assign . COMMA defv_multi

    SEMICOL         reduce using rule 7 (defv_multi -> id_adv assign .)
    COMMA           shift and go to state 29


state 18

    (12) array -> empty .

    COMMA           reduce using rule 12 (array -> empty .)
    SEMICOL         reduce using rule 12 (array -> empty .)
    RPAREN          reduce using rule 12 (array -> empty .)


state 19

    (6) defv_multi -> id_adv array .
    (8) defv_multi -> id_adv array . COMMA defv_multi

    SEMICOL         reduce using rule 6 (defv_multi -> id_adv array .)
    COMMA           shift and go to state 30


state 20

    (105) assign -> ASSIGN . expr
    (89) expr -> . lorexpr
    (90) expr -> . postexpr assign_op expr
    (91) expr -> . TIMES unaryexpr assign_op expr
    (87) lorexpr -> . landexpr
    (88) lorexpr -> . lorexpr LOR landexpr
    (44) postexpr -> . priexpr
    (45) postexpr -> . postexpr LBRACK expr_many RBRACK
    (46) postexpr -> . postexpr LPAREN RPAREN
    (47) postexpr -> . postexpr LPAREN argexpr_list RPAREN
    (48) postexpr -> . postexpr INC
    (49) postexpr -> . postexpr DEC
    (85) landexpr -> . orexpr
    (86) landexpr -> . landexpr LAND orexpr
    (41) priexpr -> . ID
    (42) priexpr -> . const
    (43) priexpr -> . LPAREN expr_many RPAREN
    (83) orexpr -> . xorexpr
    (84) orexpr -> . orexpr OR xorexpr
    (110) const -> . IVAL
    (111) const -> . FVAL
    (112) const -> . SVAL
    (113) const -> . CVAL
    (81) xorexpr -> . andexpr
    (82) xorexpr -> . xorexpr XOR andexpr
    (79) andexpr -> . eqexpr
    (80) andexpr -> . andexpr AND eqexpr
    (76) eqexpr -> . relexpr
    (77) eqexpr -> . eqexpr EQ relexpr
    (78) eqexpr -> . eqexpr NE relexpr
    (71) relexpr -> . shiftexpr
    (72) relexpr -> . relexpr LE shiftexpr
    (73) relexpr -> . relexpr GE shiftexpr
    (74) relexpr -> . relexpr LEQ shiftexpr
    (75) relexpr -> . relexpr GEQ shiftexpr
    (68) shiftexpr -> . addexpr
    (69) shiftexpr -> . shiftexpr LSHIFT addexpr
    (70) shiftexpr -> . shiftexpr RSHIFT addexpr
    (65) addexpr -> . multexpr
    (66) addexpr -> . addexpr PLUS multexpr
    (67) addexpr -> . addexpr MINUS multexpr
    (61) multexpr -> . unaryexpr
    (62) multexpr -> . multexpr TIMES unaryexpr
    (63) multexpr -> . multexpr DIVIDE unaryexpr
    (64) multexpr -> . multexpr MOD unaryexpr
    (52) unaryexpr -> . postexpr
    (53) unaryexpr -> . AND unaryexpr
    (54) unaryexpr -> . TIMES unaryexpr
    (55) unaryexpr -> . INC unaryexpr
    (56) unaryexpr -> . DEC unaryexpr
    (57) unaryexpr -> . PLUS unaryexpr
    (58) unaryexpr -> . MINUS unaryexpr
    (59) unaryexpr -> . NOT unaryexpr
    (60) unaryexpr -> . LNOT unaryexpr

    TIMES           shift and go to state 37
    ID              shift and go to state 44
    LPAREN          shift and go to state 51
    IVAL            shift and go to state 40
    FVAL            shift and go to state 32
    SVAL            shift and go to state 43
    CVAL            shift and go to state 34
    AND             shift and go to state 52
    INC             shift and go to state 56
    DEC             shift and go to state 36
    PLUS            shift and go to state 49
    MINUS           shift and go to state 46
    NOT             shift and go to state 41
    LNOT            shift and go to state 50

    expr                           shift and go to state 39
    xorexpr                        shift and go to state 45
    orexpr                         shift and go to state 53
    landexpr                       shift and go to state 47
    postexpr                       shift and go to state 54
    lorexpr                        shift and go to state 33
    shiftexpr                      shift and go to state 31
    multexpr                       shift and go to state 35
    priexpr                        shift and go to state 55
    andexpr                        shift and go to state 57
    eqexpr                         shift and go to state 59
    relexpr                        shift and go to state 58
    unaryexpr                      shift and go to state 42
    const                          shift and go to state 48
    addexpr                        shift and go to state 38

state 21

    (13) array -> LBRACK . IVAL RBRACK

    IVAL            shift and go to state 60


state 22

    (11) id_adv -> TIMES id_adv .

    LBRACK          reduce using rule 11 (id_adv -> TIMES id_adv .)
    ASSIGN          reduce using rule 11 (id_adv -> TIMES id_adv .)
    COMMA           reduce using rule 11 (id_adv -> TIMES id_adv .)
    SEMICOL         reduce using rule 11 (id_adv -> TIMES id_adv .)
    RPAREN          reduce using rule 11 (id_adv -> TIMES id_adv .)
    LPAREN          reduce using rule 11 (id_adv -> TIMES id_adv .)


state 23

    (16) s_args -> VOID .
    (109) type -> VOID .

    RPAREN          reduce using rule 16 (s_args -> VOID .)
    ID              reduce using rule 109 (type -> VOID .)
    TIMES           reduce using rule 109 (type -> VOID .)


state 24

    (15) s_args -> empty .

    RPAREN          reduce using rule 15 (s_args -> empty .)


state 25

    (18) args -> arg .
    (19) args -> arg . COMMA args
